@@ -1,15 +1,15 @@
 package com.entropyteam.entropay.employees.services;
 
 import java.time.LocalDate;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.Comparator;
-import java.util.List;
-import java.util.stream.Collectors;
 import java.util.UUID;
+import java.util.List;
 import java.util.Map;
+import java.util.ArrayList;
 import java.util.Optional;
+import java.util.Comparator;
+import java.util.Collections;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 import com.entropyteam.entropay.auth.AppRole;
 
@@ -37,7 +37,6 @@ import com.entropyteam.entropay.employees.repositories.AssignmentRepository;
 import com.entropyteam.entropay.employees.repositories.ContractRepository;
 import com.entropyteam.entropay.employees.repositories.EmployeeRepository;
 import com.entropyteam.entropay.employees.repositories.PtoRepository;
-import com.entropyteam.entropay.employees.repositories.LeaveTypeRepository;
 import com.entropyteam.entropay.employees.repositories.ClientRepository;
 
 import org.apache.commons.lang3.StringUtils;
@@ -57,6 +56,7 @@ public class ReportService {
     private final static String EMPLOYEE_ID = "employeeId";
     private final static String CLIENT_ID = "clientId";
     private final static String YEAR = "year";
+    private final static String NO_CLIENT = "noClient";
     private final ReactAdminMapper mapper;
     private final RoleRepository roleRepository;
     private final TechnologyRepository technologyRepository;
@@ -150,7 +150,9 @@ public class ReportService {
         if(filter.getGetByFieldsFilter().containsKey(EMPLOYEE_ID)) {
             ptoReportDetailDtoList = getPtoReportDetailByEmployee(employeeRepository.findById(UUID.fromString((String)filter.getGetByFieldsFilter().get(EMPLOYEE_ID))).orElseThrow(), year);
         } else if (filter.getGetByFieldsFilter().containsKey(CLIENT_ID)) {
-            ptoReportDetailDtoList = getPtoReportDetailByClient(clientRepository.findById(UUID.fromString((String)filter.getGetByFieldsFilter().get(CLIENT_ID))).orElseThrow(), year);
+            Client client = (filter.getGetByFieldsFilter().get(CLIENT_ID)).equals(NO_CLIENT) ? null :
+                    clientRepository.findById(UUID.fromString((String)filter.getGetByFieldsFilter().get(CLIENT_ID))).orElseThrow();
+            ptoReportDetailDtoList = getPtoReportDetailByClient(client, year);
         }
         else {
             ptoReportDetailDtoList = Collections.emptyList();
@@ -191,9 +193,14 @@ public class ReportService {
 
     public List<PtoReportDetailDto> getPtoReportDetailByClient(Client client, Integer year) {
         List<PtoReportDetailDto> ptoReportDetailDtoList;
-
-        List<Assignment> clientsAssignmentList = assignmentRepository.findAllAssignmentsByClientId(client.getId());
-        List<Employee> employeeList = employeeRepository.findAllById(clientsAssignmentList.stream().map(x -> x.getEmployee().getId()).toList());
+        List<Employee> employeeList;
+        if(client != null) {
+            List<Assignment> clientsAssignmentList = assignmentRepository.findAllAssignmentsByClientId(client.getId());
+            employeeList = employeeRepository.findAllById(clientsAssignmentList.stream().map(x -> x.getEmployee().getId()).toList());
+        }
+        else {
+            employeeList = employeeRepository.findAllUnassignedEmployees();
+        }
         List<Pto> employeesPtoList = ptoRepository.findPtosByEmployeeIdInAndForYear(employeeList.stream().map(BaseEntity::getId).toList(), year);
 
         ptoReportDetailDtoList = employeesPtoList.stream()
@@ -207,10 +214,10 @@ public class ReportService {
                             employee.getInternalId(),
                             employee.getFirstName(),
                             employee.getLastName(),
-                            client.getName(),
+                            client != null ? client.getName() : "No client",
                             pto.getLeaveType().getName(),
                             pto.getDays(),
-                            client.getId(),
+                            client != null ? client.getId() : null,
                             pto.getStartDate(),
                             pto.getEndDate(),
                             year
@@ -243,7 +250,7 @@ public class ReportService {
 
         Map<UUID, Double> totalPtoDaysMap = ptoList
                 .stream()
-                .collect(Collectors.groupingBy(p -> p.getEmployee().getId(), Collectors.summingDouble(p -> p.getDays())));
+                .collect(Collectors.groupingBy(p -> p.getEmployee().getId(), Collectors.summingDouble(Pto::getDays)));
 
         return employeeList.stream()
                 .filter(employee -> totalPtoDaysMap.containsKey(employee.getId()) && totalPtoDaysMap.get(employee.getId()) > 0)
@@ -273,22 +280,27 @@ public class ReportService {
 
     private List<PtoReportClientDto> getPtoReportClientDtos(List<Pto> ptoList, Integer year) {
         List<Client> clients = clientRepository.findAllClientsWithAProject();
+        List<PtoReportClientDto> ptosByClient = new ArrayList<>();
         Map<UUID, List<Assignment>> assignmentMap = assignmentRepository.findAllAssignmentsByClientIdIn(clients.stream().map(BaseEntity::getId).collect(Collectors.toList()))
                 .stream()
                 .collect(Collectors.groupingBy(assignment -> assignment.getProject().getClient().getId()));
 
-        return clients.stream().map(client -> {
+        ptosByClient.addAll(clients.stream().map(client -> {
             List<Assignment> clientAssignments = assignmentMap.getOrDefault(client.getId(), Collections.emptyList());
             List<Pto> employeesPtos = ptoList.stream().filter(pto -> clientAssignments.stream().
                     anyMatch(assignment -> assignment.getEmployee().getId() == pto.getEmployee().getId())).toList();
-            Double totalDays = employeesPtos.stream().mapToDouble(Pto::getDays).sum();
-            if(totalDays > 0) {
-                return new PtoReportClientDto(client.getId(), client.getName(), totalDays, year);
-            }
-            else {
+            double totalDays = employeesPtos.stream().mapToDouble(Pto::getDays).sum();
+            if (totalDays > 0) {
+                return new PtoReportClientDto(client.getId().toString(), client.getName(), totalDays, year);
+            } else {
                 return null;
             }
-        }).filter(Objects::nonNull).collect(Collectors.toList());
+        }).filter(Objects::nonNull).toList());
+
+        List<UUID> unassignedEmployeesIds = employeeRepository.findAllUnassignedEmployees().stream().map(BaseEntity::getId).toList();
+        Double days = ptoList.stream().filter(pto -> unassignedEmployeesIds.contains(pto.getEmployee().getId())).mapToDouble(Pto::getDays).sum();
+        ptosByClient.add(new PtoReportClientDto(NO_CLIENT, "No client", days, year));
+        return ptosByClient;
     }
 
     public Integer getYearFromFilter(Filter filter){
